# api_for_chatlium

./: .env.example  .gitignore  CLOUD_RUN_README.md  README.md  cloudbuild-odoo.yaml  deploy-to-cloud-run.sh  docker-compose.yml  test_odoo.py
Hospital_api/: DOCUMENTATION.md  Dockerfile  main.py  pyproject.toml  seed_hospital.py
Odoo/: Dockerfile  entrypoint-custom.sh  odoo.conf
RealEstate_api/: DOCUMENTATION.md  MASTER_GUIDE.md  main.py  pyproject.toml  seed_estate.py
Restaurent_api/: .env.example  DOCUMENTATION.md  README.md  create_user.py  main.py  pyproject.toml  seed_data.py
School_api/: .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  main.py  pyproject.toml  seed_data.py  seed_data_large.py  seed_log.txt
